--- a/.github/workflows/clean_workspace.yml
+++ b/.github/workflows/clean_workspace.yml
@@ -142,13 +142,13 @@ jobs:
             "clang-1[0-7].*"
             "clang-format-1[0-7].*"
             "clang-tidy-1[0-7].*"
-            "gcc-[12|14].*"
-            "libgcc-[12|14].*"
-            "g++-[12|14].*"
-            "cpp-[12|14].*"
-            "libstdc++-[12|14].*"
-            "gfortran-[12|14].*"
-            "libgfortran-[12|14].*"
+            "gcc-1[24].*"
+            "libgcc-1[24].*"
+            "g++-1[24].*"
+            "cpp-1[24].*"
+            "libstdc++-1[24].*"
+            "gfortran-1[24].*"
+            "libgfortran-1[24].*"
             # ----- Java -----
             "temurin-[0-9]+-jdk"
           )
