--- a/.github/workflows/build-lineageos.yml
+++ b/.github/workflows/build-lineageos.yml
@@ -1,4 +1,4 @@
-name: LineageOS
+name: LineageOS (Stable)
 
 on:
   repository_dispatch:
@@ -112,7 +112,7 @@ jobs:
           # https://github.com/actions/runner-images/blob/main/images/ubuntu/Ubuntu2404-Readme.md
           sudo -E apt-get -qq -y update
           installed_packages=$(dpkg-query -W -f='${binary:Package}\n')
-          
+
           # ===== Clean Apt =====
           # ----- package for purge -----
           packages_purge=(
@@ -214,7 +214,7 @@ jobs:
           sudo -E apt-get -qq -y autoremove --purge
           sudo -E apt-get -qq clean
           sudo -E systemctl daemon-reload
-          
+
           df -Th
           echo "status=success" >> ${GITHUB_OUTPUT}
 
