--- a/.github/workflows/build-pixelexperience.yml
+++ b/.github/workflows/build-pixelexperience.yml
@@ -1,4 +1,4 @@
-name: Build PixelExperience
+name: PixelExperience (Dev)
 
 on:
   repository_dispatch:
@@ -20,7 +20,7 @@ env:
 
 jobs:
   build:
-    name: Build PixelExperience
+    name: PixelExperience
     runs-on: ubuntu-24.04
     env:
       path_build: "/android/pe"
@@ -44,7 +44,7 @@ jobs:
           done
 
           echo "status=success" >> ${GITHUB_OUTPUT}
-      
+
       - name: Load Custom Environment Variables
         id: env-custom
         if: ${{ env.custom_env != '' }}
