--- a/.github/workflows/pixelos-dev.yml
+++ b/.github/workflows/pixelos-dev.yml
@@ -4,6 +4,11 @@ on:
   repository_dispatch:
   workflow_dispatch:
     inputs:
+      manifest-repo:
+        description: "Manifest repository"
+        required: true
+        type: string
+        default: "https://github.com/PixelOS-AOSP/manifest.git"
       manifest-branch:
         description: "Manifest branch"
         required: true
@@ -37,6 +42,7 @@ jobs:
     runs-on: ubuntu-24.04
     env:
       path_build: "/android/pixelos"
+      manifest-repo: ${{ inputs.manifest-repo || 'https://github.com/PixelOS-AOSP/manifest.git' }}
       manifest-branch: ${{ inputs.manifest-branch || 'fourteen' }}
       android-version: ${{ inputs.android-version || 'ginkgo' }}
     steps:
@@ -431,7 +437,7 @@ jobs:
           export REPO_ALLOW_SHALLOW=1
 
           repo init \
-            --manifest-url https://github.com/PixelOS-AOSP/manifest.git \
+            --manifest-url ${{ env.manifest-repo }} \
             --manifest-branch ${{ env.manifest-branch }} \
             --no-clone-bundle \
             --depth=1 \
