--- a/.github/workflows/pixelos-dev.yml
+++ b/.github/workflows/pixelos-dev.yml
@@ -16,7 +16,7 @@ on:
         default: "fourteen"
         options:
           - "fourteen"
-          - "thirteen"
+          - "thirdteen"
           - "twelve"
           - "eleven"
           - "ten"
